--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Modded Beepbox 2.1</title>
+	<title>ModBox2.1</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<meta name="description" content="BeepBox is an online tool for sketching and sharing chiptune melodies. " />
 	<meta name="keywords" content="chiptune, music, melody, composition, tool, square wave, NES, NSF, BeepBox, beepbox" />
 	<meta name="viewport" content="width=700">
@@ -42,7 +43,7 @@
 		<div id="beepboxEditorContainer" style="width: 100px; height: 705px;"></div>
 
 		<h1>
-			Modded BeepBox 2.1
+			ModBox 2.1
 		</h1>
 		<p id="introduction">
 			BeepBox is an online tool for sketching and sharing chiptune melodies. Modded BeepBox expands the world of BeepBox into a whole new realm!
